--- a/index.css
+++ b/index.css
@@ -185,7 +185,7 @@ footer > div:nth-child(2) > div:nth-child(3){
         width: 50%;
         margin-top: 10px;
         justify-content: space-between;
-        font-size: 40%;
+        font-size: 30%;
         font-weight: bold;
     }
 
@@ -196,12 +196,14 @@ footer > div:nth-child(2) > div:nth-child(3){
         flex-wrap: nowrap;
         flex-direction: column;
         padding: 10px;
+        font-size: smaller;
     }
 
     footer > div:nth-child(2) > div:nth-child(1) {
         display: flex;
         justify-content: space-between;
         width: 100%;
+        
     }
 
     footer > div:nth-child(2) > div:nth-child(2) {
