--- a/index.css
+++ b/index.css
@@ -8,6 +8,14 @@ body{
     height: 100vh;
 }
 
+a:hover{
+    text-decoration: underline;
+}
+
+a{
+    color: rgba(0,0,0,.54);
+}
+
 section{
     height: 100vh;
 }
@@ -31,21 +39,40 @@ nav a{
     color: black;
 }
 
+span{
+    background-color: green;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+
 input[type='search']{
-    width: 30%;
+    width: 50%;
     height: 50%;
     outline: none;
     border: 1px solid gray;
-    border-radius: 20px 20px 20px 20px;
+    border-radius: 20px 20px;
+
 }
-
-
+input[type='search']:focus{
+    border: 1px solid gray;
+    box-shadow: 50px lightblue;
+}
 
 input[type='submit']{
     border: none;
     padding: 10px;
+    cursor: pointer;
+    outline: none;
 }
 
+input[type='submit']:hover{
+    border: 1px solid lightblue;
+}
 
 .input{
     display: flex;
@@ -65,13 +92,15 @@ input[type='submit']{
 .search::before{
     content: url(./media/search_black_24dp.svg);
     position: absolute;
-    left: 35%;
+    left: 25%;
+    padding: 1%;
 }
 
 .search::after{
     content: url(./media/mic_black_24dp.svg);
     position: absolute;
-    right: 35%;
+    right: 25%;
+    padding: 1%;
 }
 
 main {
@@ -94,6 +123,10 @@ main {
     font-size: 80%;
 }
 
+.lang a{
+    color:blue;
+}
+
 a{
     text-decoration: none;
 }
@@ -104,12 +137,18 @@ footer{
     justify-content: space-around;
     width: 100%;
     height: 20%;
-    background-color:  #c4cfe6;;
+    background-color:  #f2f2f2;;
+    color:rgba(0,0,0,.54);
 }
 
 footer > div:nth-child(1){
-    border-bottom: 1px solid #909296 ;
+    border-bottom: 1px solid  #dadce0;;
     padding: 10px;
+}
+
+body > section > footer > div:nth-child(2) > div:nth-child(2){
+    display: flex;
+    align-items: center;  
 }
 
 footer > div:nth-child(2){
@@ -134,7 +173,8 @@ footer > div:nth-child(2) > div:nth-child(3){
     width: 15%;
 }
 
-@media only screen and (max-width:500px){
+
+@media only screen and (max-width:750px){
     nav {
         width: 50%;
         margin: 0 left;
@@ -153,7 +193,7 @@ footer > div:nth-child(2) > div:nth-child(3){
     }
 
     input[type='search'] {
-        width: 50%;
+        width: 80%;
         height: 50%;
         outline: none;
         border: 1px solid gray;
@@ -168,13 +208,13 @@ footer > div:nth-child(2) > div:nth-child(3){
     .search::before {
         content: url(./media/search_black_24dp.svg);
         position: absolute;
-        left: 25%;
+        left: 15%;
     }
 
     .search::after{
         content: url(./media/mic_black_24dp.svg);
         position: absolute;
-        right: 25%;
+        right: 15%;
     }
 
     .lang {
@@ -189,6 +229,16 @@ footer > div:nth-child(2) > div:nth-child(3){
         font-weight: bold;
     }
 
+    footer{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        width: 100%;
+        height: 20%;
+        background-color:  #f2f2f2;;
+        color:rgba(0,0,0,.54);
+    }
+
     footer > div:nth-child(2) {
         display: flex;
         width: 100%;
@@ -199,16 +249,35 @@ footer > div:nth-child(2) > div:nth-child(3){
         font-size: smaller;
     }
 
+    body > section > footer > div:nth-child(2){
+        display: flex;
+        flex-direction: column;
+    }
+
     footer > div:nth-child(2) > div:nth-child(1) {
         display: flex;
         justify-content: space-between;
-        width: 100%;
-        
+        width: 100%;   
+    }
+
+    body > section > footer > div:nth-child(2) > div:nth-child(2){
+        display: flex;
+        align-items: center;
+        justify-content: center;  
     }
 
     footer > div:nth-child(2) > div:nth-child(2) {
-        display: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        order: -1;
     }
 
+    footer > div:nth-child(2) > div:nth-child(3) {
+        display: flex;
+        justify-content: space-evenly;
+        width: 100%;
+        align-items: center;
+    }
 
 }
